--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^9.0.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "tushare-js-api": "^1.0.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
