--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,9 @@
-# Tushare API配置
-TUSHARE_TOKEN=42a02c36c41bd06d0365c2ad7de7d1b78427cc58329372f9d480a4d1
+# 数据库配置
+DATABASE_URL=sqlite:///./database/investment.db
 
 # 服务器配置
-PORT=3000
-
-# 数据库配置
-DB_PATH=./database/investment_assistant.db
-
-# JWT密钥
-SECRET_KEY=your_secret_key_here
-
-# API配置
-API_TIMEOUT=10000
-
-# 日志级别
-LOG_LEVEL=info
+HOST=0.0.0.0
+PORT=8000
 
 # CORS配置
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
