--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ uvicorn==0.30.1           # 支持异步，性能更好
 requests==2.32.3          # 无兼容问题
 sqlalchemy==2.0.30         # 最新2.x版本，无警告
 pydantic==2.8.2           # 最新2.x版本，功能更强
+tushare
+baostock
