--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "element-plus": "^2.11.9",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
