--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "element-plus": "^2.11.9",
+    "node-fetch": "^3.3.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
