--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "element-plus": "^2.11.9",
     "node-fetch": "^3.3.2",
     "vue": "^3.4.21",
