--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ dist-ssr
 *.sw?
 backend/__pycache__/*
 backend/股票300548_杜邦分析全量数据.xlsx
+backend/__pycache__/util.cpython-39.pyc
+backend/__pycache__/stock.cpython-39.pyc
