--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-# 最新稳定版依赖（Python 3.10+ 兼容）
-fastapi==0.111.0          # 最新稳定版
-uvicorn==0.30.1           # 支持异步，性能更好
+# Python 3.9兼容版本
+fastapi==0.104.1          # 支持Python 3.9
+uvicorn==0.24.0           # 支持Python 3.9
 requests==2.32.3          # 无兼容问题
 sqlalchemy==2.0.30         # 最新2.x版本，无警告
 pydantic==2.8.2           # 最新2.x版本，功能更强
